fixtures/invalid/24-insights-bad-type/input.anatomy
anatomy_version = "0.6"
tagline = "A static site generator."

[identity]
fingerprint = "a8fybpg4nh2b5vpw498v"

[identity.stack]
id = "rust"
hash = "a8fyb"

[identity.form]
id = "cli-tool"
hash = "pg4nh"

[identity.domain]
id = "web-publishing"
hash = "2b5vp"

[identity.function]
id = "markdown-to-static-html"
hash = "w498v"

[[insights]]
type = "design"
name = "plugin-pipeline"
summary = "Content transforms are composable plugins."

[[insights]]
type = "architecture"
name = "core-loop"
summary = "The main event loop processes requests sequentially."

[[insights]]
type = "pattern"
name = "handler-chain"
summary = "Handlers compose via a middleware stack."

[generated]
at = 2026-05-06T12:00:00.000Z
by = "anatomy-cli@0.6.0"
model = "none"
schema = "https://anatomy.dev/spec/0.6/schema.json"
